syntax = "proto3";

package go_serv.net;

message Crypto_PubKeyExchange {
  message Psk { // Pre-shared key
  }
  message ECDH { // Elliptic-curve Diffie-Hellman
    bytes pub_key = 1;
  }
  message DiffieHellman {
    bytes pub_key = 1;
  }
  message Rsa {
    bytes pub_key = 1;
  }
}

enum Crypto_AEADCipher {
  AES_GCM = 0; // AES in Galois/Counter Mode
}
